# Expense_Summary

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BLUEHOST_DEPLOYMENT_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_FIX_PROMPT.md  DEPLOYMENT.md  DESIGN_SYSTEM_README.md  Makefile  NETWORK_ACCESS.md  README.md  config.toml  config.toml.example  design-system.json  packages.txt  playwright.config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ui_tests.sh  run_web.sh  run_web_network.sh  setup_port_forward.ps1  streamlit_app.py  tailwind.config.js  web_app.py  web_app_old.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ui-tests.yml
.streamlit/: config.toml  secrets.toml.example
config/: playwright_config.py
data/reference/: NameList.csv  config.toml
demo/: README.md  run-demo.sh
demo/Input/: 202510_sample.csv
demo/Output/: 202510_sample.csv  202510_sample.html
demo/Reference/: NameList.csv
docs/: COMPONENT_TREE.md  DEVELOPMENT.md  README.md  REDESIGN_SUMMARY.md  SAISON_2510wtNumbering.csv  UI_IMPROVEMENT_PROMPT.md  WORKFLOW_QUICK_START.md  WORKFLOW_UI.md  decision-log.md  project-status.md  quick-start.md  session-index.md  spec.txt
docs/changes/add-amount-based-attendees/: proposal.md  tasks.md
docs/changes/fix-cli-and-archival/: proposal.md  tasks.md
docs/changes/fix-cli-and-archival/specs/data-pipeline/: spec.md
docs/changes/update-csv-preserve-all-rows/: proposal.md  tasks.md
docs/changes/update-csv-preserve-all-rows/specs/data-pipeline/: spec.md
docs/development/: AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  design-system.md  i18n_guide.md
docs/guides/: CLAUDE.md  CRUD_GUIDE.md  WEB_INTERFACE_GUIDE.md
docs/project/: decision-log.md
docs/sessions/: 20251107_095032_phase1-poetry-environment-complete.md  20251107_102056_phase2-pipeline-implementation.md
docs/specs/data-pipeline/: spec.md
docs/specs/environment-setup/: spec.md
examples/: OPTIMISTIC_UI_README.md  REACT_LAYOUT_README.md  component_showcase.py  empty_states_demo.py  optimistic_ui_interface.tsx  react_layout.tsx  three_pane_ai_interface.tsx
examples/empty-states/: DESIGN_EVALUATION.md  EmptyState.improved.tsx  EmptyState.stories.tsx  EmptyState.tsx  EmptyStateExamples.tsx  QUICKSTART.md  README.md  TESTING_GUIDE.md  TestDemo.tsx  animations.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/empty-states/.storybook/: main.ts  preview.tsx
examples/empty-states/src/: main.tsx  styles.css
examples/state-management/: README.md  STATE_DIAGRAM.md  package.json  redux-store.ts  usage-examples.tsx  xstate-store.ts  zustand-store.ts
openspec/changes/add-amount-based-attendees/specs/data-pipeline/: spec.md
openspec/changes/fix-cli-and-archival/: tasks.md
openspec/changes/plan-data-pipeline/: evidence.md  proposal.md  tasks.md
openspec/changes/plan-data-pipeline/specs/data-pipeline/: spec.md
openspec/changes/plan-poetry-environment/: evidence.md  proposal.md  tasks.md
openspec/changes/plan-poetry-environment/specs/environment-setup/: spec.md
saisonxform-demo/: config.toml
scripts/: run_ui_tests.sh  run_web.sh  run_web_network.sh
src/saisonxform/: __init__.py  cli.py  config.py  io.py  month_utils.py  reporting.py  selectors.py
src/saisonxform/templates/: report.html.j2
src/saisonxform/ui/: README.md  __init__.py  components.py  empty_states.py  step_download.py  step_process.py  step_upload.py  sticky_header.py  styles.py  translations.py  workflow_state.py  workflow_styles.py
src/saisonxform/ui/tokens/: __init__.py  colors.py  effects.py  spacing.py  typography.py
templates/: report.html.j2
tests/: __init__.py  conftest.py  test_cli.py  test_demo_e2e.py  test_edge_cases.py  test_integration.py  test_io.py  test_month_utils.py  test_reporting.py  test_selectors.py  test_web_app.py
tests/data/: SAISON_2511_input.csv  SAISON_2511_output.csv  SAISON_2511_output_OLD.csv  SAISON_2511_output_test.html  namelist.csv  sample_202510.csv
tests/ui_tests/: README.md  SETUP.md  __init__.py  conftest.py  test_cross_browser.py
