[tool.poetry]
name = "saisonxform"
version = "0.2.1"
description = "Process financial transaction CSV files to identify meeting/entertainment expenses and assign attendees"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "saisonxform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
pandas = "^2.2.0"
numpy = "^2.0.0"
chardet = "^5.0.0"
jinja2 = "^3.1.0"
typer = "0.9.0"
click = "8.1.3"
tomli = {version = "^2.0.1", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
bandit = "^1.7.5"
pre-commit = "^3.5.0"
commitizen = "^3.13.0"

[tool.poetry.scripts]
saisonxform = "saisonxform.cli:app"
sf = "saisonxform.cli:app"

[tool.saisonxform]
# Default configuration (can be overridden by config.toml or environment variables)
# Config precedence: env vars > config.toml > pyproject.toml [tool.saisonxform]
input_dir = "../Input"
reference_dir = "../Reference"
output_dir = "../Output"
archive_dir = "../Archive"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from inside except (allow for now)
    "B028",  # warning stacklevel (not critical)
    "C901",  # too complex
    "S101",  # use of assert (OK in tests)
    "S311",  # pseudo-random generators (OK for non-crypto use)
    "T201",  # print() (OK for CLI output in some cases)
    "UP007", # Use X | Y syntax (Python 3.10+ - can enable later)
    "I001",  # import sorting (handled by isort)
]

[tool.ruff.lint.isort]
known-first-party = ["saisonxform"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "T20", "S103", "S603", "S607"]  # Allow assert, print, subprocess, chmod in tests
"src/saisonxform/cli.py" = ["S603", "S607"]  # Allow subprocess for git command

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "chardet.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Allow assert statements

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/saisonxform/__init__.py:__version__"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=saisonxform",
    "--cov-report=term-missing",
    "--cov-fail-under=90"
]

[tool.isort]
profile = "black"
line_length = 120
